@@ -24,7 +24,7 @@ You are accessing a webauth-protected page as the user: $REMOTE_USER<br>
 <br>
 This tests authorization for groups, stanford:student, stanford:staff, stanford:faculty. Membership in one or more of them is the condition of authorization, in other words it's an OR not an AND. 
 <br>
-In this case, you have been authorized by the privgroup "$AUTHRULE" as you can see
+In this case, you have been authorized by "$AUTHRULE" as you can see
  by the environment variable WEBAUTH_LDAPAUTHRULE below.
 <br>
 EOS
