@@ -24,7 +24,7 @@ You are accessing a webauth-protected page as the user: $REMOTE_USER<br>
 <br>
 This tests the WebAuth 2.x compatibility directives, <b>AuthType StanfordAuth</b> and <b>require group <i>groupname</i></b>.
 <br>
-In this case, you have been authorized by the privgroup "$AUTHRULE" as you can see
+In this case, you have been authorized by "$AUTHRULE" as you can see
  by the environment variable WEBAUTH_LDAPAUTHRULE below.
 <br>
 EOS
