@@ -24,7 +24,7 @@ You are accessing a webauth-protected page as the user: $REMOTE_USER<br>
 <br>
 This test will restrict to privgroup stanford:stanford and retrieve three attributes: displayName, mail, and suAffiliation. If your directory entry contains these attributes, you should see them below as WEBAUTH_LDAP_DISPLAYNAME, WEBAUTH_LDAP_MAIL, and WEBAUTH_LDAP_SUAFFILIATION 
 <br>
-In this case, you have been authorized by the privgroup "$AUTHRULE" as you can see by the environment variable WEBAUTH_LDAPAUTHRULE below.
+In this case, you have been authorized by "$AUTHRULE" as you can see by the environment variable WEBAUTH_LDAPAUTHRULE below.
 <br>
 EOS
 
