@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "WA_KEYRING 1"
-.TH WA_KEYRING 1 "2010-07-07" "3.7.0" "WebAuth"
+.TH WA_KEYRING 1 "2010-07-08" "3.7.0" "WebAuth"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
