@@ -3,7 +3,6 @@
   <head>
     <http-equiv="pragma" content="no-cache">
     <title>WebAuth Help</title>
-    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
   </head>
 
   <body>
