@@ -3,7 +3,6 @@
   <head>
     <http-equiv="pragma" content="no-cache">
     <title>WebAuth Login</title>
-    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
   </head>
 
   <TMPL_IF NAME=notdefined>
@@ -26,6 +25,7 @@ username               : the username
 login_cancel           : a cancel URL was specified
 cancel_url             : the specified cancel URL
 show_remuser           : show a button for REMOTE_USER authentication
+remuser_failed         : REMOTE_USER authentication was tried and failed
 remuser_url            : where to send the user for REMOTE_USER auth
 -->
   </TMPL_IF>
@@ -47,10 +47,11 @@ remuser_url            : where to send the user for REMOTE_USER auth
             <TMPL_ELSE>
               Error: Enter your username.
             </TMPL_IF>
-          </TMPL_IF>     
-          <TMPL_IF NAME=err_password>
-            <!-- Error: no password submitted. -->
-            Error: Enter your password.
+          </TMPL_ELSE>
+            <TMPL_IF NAME=err_password>
+              <!-- Error: no password submitted. -->
+              Error: Enter your password.
+            </TMPL_IF>
           </TMPL_IF>
 
           <TMPL_IF NAME=err_loginfailed>
